# babyxml

./: CMakeLists.txt  babyxml-config.cmake.in  flake.nix
include/: babyxml.hpp
src/: babyxml.cpp  reader.cpp  reader.hpp
test/: babyxml_test.cpp
